Cleanup avec SonarLint